--- a/plugins/CoreHome/lang/el.json
+++ b/plugins/CoreHome/lang/el.json
@@ -102,6 +102,7 @@
         "RowLimit": "Όριο γραμμής",
         "CustomLimit": "Προσαρμοσμένο όριο",
         "ExportFormat": "Μορφή εξαγωγής",
+        "ExportTooltip": "Σημείωση: Η διεύθυνση URL για την εξαγωγή θα δουλέψει μόνο στην τρέχουσα σύνοδο του προγράμματος πλοήγησης. Αν θέλετε να τη χρησιμοποιήσετε κάπου αλλού, πρέπει να χρησιμοποιήσετε ένα τεκμήριο πιστοποίησης για εφαρμογή. Μπορείτε να ρυθμίσετε τέτοια τεκμήρια στη Διαχείριση -> Ασφάλεια -> Τεκμήρια Πιστοποίησης.",
         "ExpandSubtables": "Ανάπτυξη υποπινάκων",
         "StandardReport": "Κανονική αναφορά",
         "FlattenReport": "Επίπεδη αναφορά",
