--- a/plugins/Installation/lang/ru.json
+++ b/plugins/Installation/lang/ru.json
@@ -145,7 +145,6 @@
         "WelcomeHelp": "<p>Matomo — это бесплатное программное обеспечение для веб-аналитики, которое упрощает получение необходимой информации ваших посетителей.<\/p> <p>Этот процесс разбивается на несколько (%s) простых шагов и займет около 5 минут.<\/p>",
         "WelcomeToCommunity": "Добро пожаловать в сообщество Matomo!",
         "CannotConnectToDb": "Не удается подключиться к базе данных",
-        "CannotConnectToDbResolvingExplanation": "Это может быть временная проблема, попробуйте %1$sобновить страницу%2$s. Если проблема не исчезнет, обратитесь к администратору Matomo.",
-        "EmailPrivacyNotice": "Ваш адрес электронной почты будет использоваться только для отправки вам новостей Matomo. Вы можете отказаться от подписки в любое время, нажав на ссылку отписаться. Мы не будем передавать вашу электронную почту кому-либо ещё или использовать вашу электронную почту для каких-либо иных целей, кроме отправки вам новостей Matomo. Пожалуйста, ознакомьтесь с нашей %1$sполитикой конфиденциальности%2$s для получения дополнительной информации."
+        "CannotConnectToDbResolvingExplanation": "Это может быть временная проблема, попробуйте %1$sобновить страницу%2$s. Если проблема не исчезнет, обратитесь к администратору Matomo."
     }
 }
