--- a/plugins/Installation/lang/sq.json
+++ b/plugins/Installation/lang/sq.json
@@ -150,6 +150,6 @@
         "WelcomeToCommunity": "Mirë se vini te bashkësia Matomo!",
         "CannotConnectToDb": "S’lidhet dot me bazën e të dhënave",
         "CannotConnectToDbResolvingExplanation": "Ky mund të jetë problem i përkohshëm, provoni %1$stë rifreskoni faqen%2$s. Nëse problemi vazhdon, ju lutemi lidhuni me përgjegjësin e Matomo-s tuaj.",
-        "EmailPrivacyNotice": "Adresa juaj email do të përdoret vetëm për t’ju dërguar buletinin e Matomo-s. Mund të shpajtoheni kur të doni, duke klikuar mbi lidhjen e shpajtimit. Nuk do t’i japim kujt email-in tuaj, apo ta përdorim email-in tuaj për qëllime të tjera veç dërgimit të buletinit Matomo. Ju lutemi, për më tepër hollësi, shihni %1$srregullat tona mbi privatësinë%2$s."
+        "EmailPrivacyNotice": "Adresa juaj email do të përdoret vetëm për t’ju dërguar buletinin. Për këtë na duhet ta japim email-in tuaj te një furnizues palë e tretë. Aktualisht ky furnizues është Mad Mimi, por kjo mund të ndryshojë në të ardhmen. Email-in tuaj s’do t’ia japim kujt tjetër apo ta përdorim për çfarëdo qëllimi tjetër nga dërgimi për ju i buletinit. Mund të shpajtoheni kur të doni. Për më tepër të dhëna, ju lutemi, shihni %1$srregullat tona mbi privatësinë%2$s."
     }
 }
