--- a/plugins/CoreUpdater/lang/fi.json
+++ b/plugins/CoreUpdater/lang/fi.json
@@ -91,6 +91,7 @@
         "YouMustDownloadPackageOrFixPermissions": "Matomo ei pysty ylikirjoittamaan nykyistä asennustasi. Voit joko korjata hakemistojen ja tiedostojen oikeudet tai ladata paketin ja asentaa version %s käsin:",
         "YourDatabaseIsOutOfDate": "Matomon tietokanta on vanhentunut ja se tulee päivittää ennen jatkamista.",
         "ViewVersionChangelog": "katso muutostiedot tälle versiolle:",
-        "ReceiveEmailBecauseIsSuperUser": "Saat tämän viestin, koska olet seuraavan Matomo-asennuksen pääkäyttäjä: %s"
+        "ReceiveEmailBecauseIsSuperUser": "Saat tämän viestin, koska olet seuraavan Matomo-asennuksen pääkäyttäjä: %s",
+        "ConvertToUtf8mb4": "Muunna tietokanta UTF8mb4-merkistöön"
     }
 }
