--- a/plugins/Installation/lang/de.json
+++ b/plugins/Installation/lang/de.json
@@ -149,7 +149,6 @@
         "WelcomeHelp": "<p>Matomo ist eine frei verfügbare Webanalyse-Software, welche erlaubt, einfach die gewünschten Informationen über die Besucher Ihrer Website zu erhalten.<\/p><p>Dieser Prozess ist aufgeteilt in %s einfache Schritte und wird rund 5 Minuten dauern.<\/p>",
         "WelcomeToCommunity": "Willkommen in der Matomo Community!",
         "CannotConnectToDb": "Verbindung zur Datenbank ist fehlgeschlagen",
-        "CannotConnectToDbResolvingExplanation": "Dies könnte ein temporäres Problem sein. Versuchen Sie diese %1$sSeite neu zu laden%2$s. Wenn das Problem weiterhin besteht, wenden Sie sich bitte an Ihren Matomo Administrator.",
-        "EmailPrivacyNotice": "Ihre E-Mail-Adresse wird ausschließlich dafür verwendet Ihnen den Matomo Newsletter zuzusenden. Sie können sich jederzeit davon Abmelden indem Sie den Abmelden Link klicken. Ihre E-Mail-Adresse wird an niemanden weitergegeben und auch nicht zu einem anderen Zweck verwendet, als Ihnen den Matomo Newsletter zuzusenden. Bitte lesen Sie unsere %1$sDatenschutzerklärung%2$s für weitere Informationen."
+        "CannotConnectToDbResolvingExplanation": "Dies könnte ein temporäres Problem sein. Versuchen Sie diese %1$sSeite neu zu laden%2$s. Wenn das Problem weiterhin besteht, wenden Sie sich bitte an Ihren Matomo Administrator."
     }
 }
