--- a/plugins/Installation/lang/el.json
+++ b/plugins/Installation/lang/el.json
@@ -150,6 +150,6 @@
         "WelcomeToCommunity": "Καλωσήρθατε στην κοινότητα του Matomo!",
         "CannotConnectToDb": "Δεν είναι δυνατή η σύνδεση με τη βάση δεδομένων.",
         "CannotConnectToDbResolvingExplanation": "Ενδεχομένως να υπάρχει ένα προσωρινό πρόβλημα, δοκιμάστε να %1$sανανεώστε τη σελίδα%2$s. Αν το πρόβλημα παραμένει, παρακαλούμε επικοινωνήστε με το διαχειριστή του Matomo.",
-        "EmailPrivacyNotice": "Η διεύθυνση email σας θα χρησιμοποιείται μόνο για την αποστολή του ενημερωτικού δελτίου του Matomo. Μπορείτε να κάνετε διαγραφή οποιαδήποτε στιγμή με κλικ στον σύνδεσμο διαγραφής. Δε θα δώσουμε την διεύθυνση email σας σε οποιονδήποτε άλλον ή θα την χρησιμοποιήσουμε για οποιονδήποτε σκοπό διαφορετικό από την αποστολή του ενημερωτικού δελτίου του Matomo. Δείτε την %1$sπολιτική ιδιωτικότητας%2$s για περισσότερες πληροφορίες."
+        "EmailPrivacyNotice": "Η διεύθυνση email σας θα χρησιμοποιείται μόνο για την αποστολή του ενημερωτικού δελτίου. Για το σκοπό αυτό, μοιραζόμαστε το email σας με έναν τρίτο. Αυτός ο τρίτος είναι το Mad Mimi, αλλά αυτό ενδέχεται να αλλάξει στο μέλλον. Δε θα δώσουμε την διεύθυνση email σας σε οποιονδήποτε άλλον και ούτε θα την χρησιμοποιήσουμε για οποιονδήποτε σκοπό διαφορετικό από την αποστολή του ενημερωτικού δελτίου. Δείτε την %1$sπολιτική ιδιωτικότητας%2$s για περισσότερες πληροφορίες."
     }
 }
