--- a/plugins/Installation/lang/es-ar.json
+++ b/plugins/Installation/lang/es-ar.json
@@ -149,7 +149,6 @@
         "WelcomeHelp": "<p>Matomo es software libre de análisis de web que hace fácil obtener la información que querés de tus visitantes.<\/p> <p>Este proceso está dividido hasta en %s fáciles pasos y llevará unos 5 minutos.<\/p>",
         "WelcomeToCommunity": "¡Bienvenido a la comunidad Matomo!",
         "CannotConnectToDb": "No se puede conectar a la base de datos",
-        "CannotConnectToDbResolvingExplanation": "Esto podría ser un problema tempóral, intentá %1$srecargar la página%2$s. Si el problema persiste, por favor, contactá a tu administrador de Matomo.",
-        "EmailPrivacyNotice": "Tu dirección de correo electrónico sólo será usado para enviarte el boletín de noticias de Matomo. Podés desuscribirte cuando quieras haciendo clic en el enlace de desuscripción. No compartiremos tu correo electrónico con nadie más ni usaremos el mismo para ningún otro propósito que el que acabamos de mencionar. Por favor, consultá nuestra %1$spolítica de privacidad%2$s para más información."
+        "CannotConnectToDbResolvingExplanation": "Esto podría ser un problema tempóral, intentá %1$srecargar la página%2$s. Si el problema persiste, por favor, contactá a tu administrador de Matomo."
     }
 }
