--- a/plugins/Installation/lang/it.json
+++ b/plugins/Installation/lang/it.json
@@ -149,7 +149,6 @@
         "WelcomeHelp": "<p>Matomo è un software di analisi web libero e gratuito che ti rende facile prendere dai tuoi visitatori le informazioni che desideri.<\/p><p>Questo processo è suddiviso in %s semplici step e richiederà circa 5 minuti.<\/p>",
         "WelcomeToCommunity": "Benevenuto nella comunità di Matomo!",
         "CannotConnectToDb": "Impossibile connettersi al database",
-        "CannotConnectToDbResolvingExplanation": "Potrebbe trattarsi di un problema temporaneo, prova a %1$sricaricare la pagina%2$s. Se il problema persiste, contatta il tuo amministratore di Matomo.",
-        "EmailPrivacyNotice": "Il tuo indirizzo email verrà utilizzato solamente per inviarti la newsletter di Matomo. Puoi cancellare l'iscrizione in qualunque momento cliccando sul link di cancellazione. Non condivideremo con nessun altro la tua email, né la utilizzeremo per altro scopo che non sia inviarti la newsletter di Matomo. Consulta la nostra %1$sinformativa sulla privacy%2$s per avere altre informazioni."
+        "CannotConnectToDbResolvingExplanation": "Potrebbe trattarsi di un problema temporaneo, prova a %1$sricaricare la pagina%2$s. Se il problema persiste, contatta il tuo amministratore di Matomo."
     }
 }
