--- a/plugins/Installation/lang/ja.json
+++ b/plugins/Installation/lang/ja.json
@@ -149,7 +149,6 @@
         "WelcomeHelp": "<p>Matomo は無料\/自由な Web 解析ソフトウェアで、ビジターから必要な情報を簡単に取得することができます。<\/p> <p>このプロセスは%sの簡単なステップに分割され、約 5 分かかります。<\/p>",
         "WelcomeToCommunity": "Matomo コミュニティへようこそ！",
         "CannotConnectToDb": "データベースに接続できません",
-        "CannotConnectToDbResolvingExplanation": "これは一時的な問題の可能性があります。%1$srefreshing the page%2$s をお試しください。問題が続く場合、Matomo 管理者にお問い合わせください。",
-        "EmailPrivacyNotice": "あなたのメールアドレスは、Matomo ニュースレターの送信にのみ使用されます。 退会リンクをクリックすると、いつでも退会できます。 私たちはあなたのメールを他の人と共有したり、Matomo のニュースレターを送る以外の目的で使用したりしません。 詳細については、当社の%1$sプライバシーポリシー%2$sを参照してください。"
+        "CannotConnectToDbResolvingExplanation": "これは一時的な問題の可能性があります。%1$srefreshing the page%2$s をお試しください。問題が続く場合、Matomo 管理者にお問い合わせください。"
     }
 }
