--- a/plugins/Installation/lang/pt-br.json
+++ b/plugins/Installation/lang/pt-br.json
@@ -149,7 +149,6 @@
         "WelcomeHelp": "<p>Matomo é um analisador de tráfego open source que torna fácil obter informações sobre os seus visitantes.<\/p><p>Este processo é dividido em %s passos fáceis e irá demorar por volta de 5 minutos.<\/p>",
         "WelcomeToCommunity": "Bem-vindo à comunidade Matomo!",
         "CannotConnectToDb": "Não foi possível conectar com o banco de dados",
-        "CannotConnectToDbResolvingExplanation": "Isso pode ser um problema temporário, tente %1$srecarregar a página%2$s. Se o problema persistir, por favor contacte o administrador do Matomo.",
-        "EmailPrivacyNotice": "Seu endereço de email será usado apenas para enviar o boletim informativo Matomo. Você pode cancelar a inscrição a qualquer momento clicando no link de cancelamento de inscrição. Não compartilharemos seu email com mais ninguém ou usaremos seu email para qualquer outra finalidade que não seja enviar o boletim informativo Matomo. Por favor, consulte nossa %1$s política de privacidade %2$s para mais informações."
+        "CannotConnectToDbResolvingExplanation": "Isso pode ser um problema temporário, tente %1$srecarregar a página%2$s. Se o problema persistir, por favor contacte o administrador do Matomo."
     }
 }
