--- a/plugins/UsersManager/lang/el.json
+++ b/plugins/UsersManager/lang/el.json
@@ -18,9 +18,10 @@
         "AuthTokenPurpose": "Για ποιο λόγο χρησιμοποιείτε αυτό το τεκμήριο αυθεντικοποίησης;",
         "NoTokenCreatedYetCreateNow": "Δεν έχει δημιουργηθεί ακόμη τεκμήριο αυθεντικοποίησης, %1$sδημιουργήστε ένα νέο τώρα%2$s.",
         "TokenSuccessfullyGenerated": "Το τεκμήριο αυθεντικοποίησης δημιουργήθηκε",
-        "ConfirmTokenCopied": "Επιβεβαιώνω ότι αντέγραψα το τεκμήριο αυθεντικοποίησης.",
+        "ConfirmTokenCopied": "Επιβεβαιώνω ότι έχω αντιγράψει το πειστήριο πιστοποίησης και κατανοώ ότι δεν πρέπει να το δώσω σε κανέναν.",
         "GoBackSecurityPage": "Επιστροφή πίσω στη σελίδα ασφαλείας.",
         "PleaseStoreToken": "Παρακαλούμε αποθηκεύστε το τεκμήριο αυθεντικοποίησης με ασφαλή τρόπο, καθώς δεν θα μπορείτε πλέον να το προσπελάσετε ή δείτε ξανά.",
+        "DoNotStoreToken": "Μην μοιραστείτε το πειστήριο πιστοποίησης με οποιονδήποτε, καθώς είναι μυστικό ακριβώς όπως το όνομα χρήστη και το συνθηματικό σας.",
         "CreateNewToken": "Δημιουργία νέου τεκμηρίου αυθεντικοποίησης",
         "AnonymousAccessConfirmation": "Πρόκειται να δώσετε το δικαίωμα 'ανάγνωσης' στους ανώνυμους χρήστες στον ιστοτόπο. Αυτό σημαίνει ότι οι αναφορές των αναλυτικών σας και οι πληροφορίες των επισκεπτών θα είναι διαθέσιμα από οποιονδήποτε, ακόμη και αν δεν έχει κάνει είσοδο. Είστε σίγουροι ότι θέλετε να συνεχίσετε",
         "AnonymousUser": "Ανώνυμος χρήστης",
