--- a/plugins/UsersManager/lang/sq.json
+++ b/plugins/UsersManager/lang/sq.json
@@ -18,9 +18,10 @@
         "AuthTokenPurpose": "Për çfarë po e përdorni këtë token?",
         "NoTokenCreatedYetCreateNow": "Ende pa token të krijuar, %1$skrijoni një token të ri tani%2$s.",
         "TokenSuccessfullyGenerated": "Token-i u prodhua me sukses",
-        "ConfirmTokenCopied": "Ripohoj se e kopjova token-in.",
+        "ConfirmTokenCopied": "Ripohoj se e kam kopjuar token-in dhe e kuptoj se s’duhet t’ia jap kujt tjetër këtë token.",
         "GoBackSecurityPage": "Shkoni pas te faqja e sigurisë.",
         "PleaseStoreToken": "Ju lutemi, depozitojeni token-in tuaj në vend të sigurt, ngaqë s’do të jeni në gjendje të hyni në të ose ta shihni sërish.",
+        "DoNotStoreToken": "Mos ia jepni kujt këtë token, ngaqë është po aq i fshehtë sa kredencialet tuaj të hyrjes dhe fjalëkalimi juaj.",
         "CreateNewToken": "Krijo token të ri",
         "AnonymousAccessConfirmation": "Ju ndan një hap nga akordimi përdoruesit anonim hyrje 'parjesh' në këtë sajt. Kjo do të thotë që raportet tuaja analitike dhe të dhënat e vizitorëve tuaj do të mund të shihen publikisht nga cilido, madje edhe pa kredenciale hyrjeje. Jeni i sigurt se doni të vazhdohet?",
         "AnonymousUser": "Përdorues anonim",
