--- a/plugins/CoreAdminHome/lang/de.json
+++ b/plugins/CoreAdminHome/lang/de.json
@@ -4,12 +4,12 @@
         "Administration": "Administration",
         "ArchivingSettings": "Archivierungseinstellungen",
         "BrandingSettings": "Branding Einstellungen",
-        "ErrorEmailFromAddressNotValid": "Die SMTP Von-Adresse ist ungültig",
+        "ErrorEmailFromAddressNotValid": "Die SMTP Absender-Adresse ist ungültig",
         "ReleaseChannel": "Release Kanal",
         "ClickHereToOptIn": "Klicken Sie hier, um Ihren Besuch wieder erfassen zu lassen.",
         "ClickHereToOptOut": "Klicken Sie hier, damit Ihr Besuch nicht mehr erfasst wird.",
-        "CorsDomains": "Cross-Origin Resource Sharing (CORS) Domänen",
-        "CorsDomainsHelp": "Sie können Domänen oder Subdomänen wie http:\/\/example.com oderr http:\/\/stats.example.com definieren. Oder fügen Sie einfach * hinzu, um cross domain requests für alle Domänen zu erlauben",
+        "CorsDomains": "Cross-Origin Resource Sharing (CORS) Domains",
+        "CorsDomainsHelp": "Sie können Domains oder Subdomains wie http:\/\/example.com oder http:\/\/stats.example.com definieren. Oder fügen Sie einfach * hinzu, um cross domain requests für alle Domains zu erlauben.",
         "CustomLogoFeedbackInfo": "Wenn Sie das Matomo-Logo anpassen, ist sicher auch das Verstecken des %1$s-Links in der Navigation von Interesse. Bitte dazu das Feedback Plugin auf der %2$sPlugins verwalten%3$s Seite deaktivieren.",
         "CustomLogoHelpText": "Hier kann das Matomo-Logo angepasst werden, das in der Benutzeroberfläche sowie in E-Mail-Berichten verwendet wird.",
         "DevelopmentProcess": "Auch wenn unser Entwicklungsprozess tausende an automatisierten Tests beinhaltet, haben Beta-Tester eine Schlüsselrolle um die \"No Bug Policy\" in Matomo zu gewährleisten.",
@@ -32,7 +32,7 @@
         "JSTracking_CodeNoteBeforeClosingHead": "Stellen Sie sicher, dass sich dieser Code auf jeder Seite Ihrer Webseite befindet. Wir empfehlen, ihn direkt vor dem schließenden %1$s Tag zu positionieren.",
         "JSTracking_CodeNoteBeforeClosingHeadEmail": "Stelen Sie sicher, dass dieser Code innerhalb eines Skript-Elementes auf jeder Seite Ihrer Webseite enthalten ist. Wir empfehlen den Code direkt vor dem schließenden Head-Tag einzubauen.",
         "JSTracking_CustomCampaignQueryParam": "Eigene Anfrage-Parameter für Kampagnen Name & Suchbegriff verwenden",
-        "JSTracking_CrossDomain": "Standardmäßig wird die Besucher-ID, welche einen eindeutigen Besucher identifiziert, in den Cookies des Browsers, auf welche nur von einer einzelnen Domain zugegriffen werden kann, gespeichert. Wenn Sie Domainübergreifendes Tracking aktivieren, können Sie alle Aktionen und Seitenaufrufe eines bestimmten Besuchers in demselben Besuch verfolgen, auch wenn sie Seiten auf mehreren Domänen anzeigen. Wenn ein Benutzer auf einen Link zu einer der Alias-URL Ihrer Webseite klickt, wird automatisch der URL-Parameter pk_vid angefügt, der die Besucher-ID an die neue Domain übergibt.",
+        "JSTracking_CrossDomain": "Standardmäßig wird die Besucher-ID, welche einen eindeutigen Besucher identifiziert, in den Cookies des Browsers, auf welche nur von einer einzelnen Domain zugegriffen werden kann, gespeichert. Wenn Sie Domainübergreifendes Tracking aktivieren, können Sie alle Aktionen und Seitenaufrufe eines bestimmten Besuchers in demselben Besuch verfolgen, auch wenn sie Seiten auf mehreren Domains anzeigen. Wenn ein Benutzer auf einen Link zu einer der Alias-URL Ihrer Webseite klickt, wird automatisch der URL-Parameter pk_vid angefügt, der die Besucher-ID an die neue Domain übergibt.",
         "JSTracking_CrossDomain_NeedsMultipleDomains": "Hinweis: Um Cross Domain Linking zu unterstützen, müssen Sie mehr als einen Domainnamen (URLs) für Ihre Webseite definieren.",
         "JSTracking_CustomCampaignQueryParamDesc": "Hinweis: %1$sMatomo erkennt Parameter von Google Analytics automatisch.%2$s",
         "JSTracking_DisableCookies": "Alle Tracking Cookies deaktivieren",
