--- a/plugins/PrivacyManager/lang/en.json
+++ b/plugins/PrivacyManager/lang/en.json
@@ -10,7 +10,7 @@
         "ConsentExplanation": "Consent means offering individuals choice and control about how their personal data is processed.",
         "ClickHereSettings": "Click here to access the %s settings.",
         "WhenDoINeedConsent": "When do I need to ask for user consent?",
-        "WhenConsentIsNeeded1": "In the context of the GDPR privacy regulations, when you are processing personal data, in some cases you will need to ask for your users' consent. To identify whether you need to ask for consent, you need to determine whether your lawful basis for processing personal data is \"Consent\" or \"Legitimate interest\", or whether you can avoid collecting personal data altogether. We recommend to learn more about the lawful basis under the GDPR for Matomo.",
+        "WhenConsentIsNeeded1": "In the context of the %1$sGDPR privacy regulations%2$s, when you are processing personal data, in some cases you will need to ask for your users' consent. To identify whether you need to ask for consent, you need to determine whether your lawful basis for processing personal data is \"Consent\" or \"Legitimate interest\", or whether you can avoid collecting personal data altogether. We recommend to learn more about the %3$slawful basis under the GDPR for Matomo%4$s.",
         "WhenConsentIsNeeded2": "Note that when you require to have your users' consents and if you cannot prove that you got the \"Consent\" of your users in the past, then we recommend to %1$sanonymise your previously tracked users' raw data%2$s.",
         "HowDoIAskForConsent": "How do I ask users for consent?",
         "AskForConsentFollowSteps": "Follow the steps below to ask your user for their consents before their data is processed within Matomo.",
