--- a/plugins/UsersManager/lang/de.json
+++ b/plugins/UsersManager/lang/de.json
@@ -174,7 +174,7 @@
         "EmailChangeNotificationSubject": "Die E-Mail-Adresse Ihres Matomo Benutzerkontos wurde soeben geändert",
         "EmailChangedEmail1": "Die E-Mail-Adresse, die mit Ihrem Benutzerkonto verknüpft ist, wurde auf %1$s geändert.",
         "EmailChangedEmail2": "Diese Änderung wurde von folgendem Gerät veranlasst: %1$s (IP-Adresse = %2$s).",
-        "IfThisWasYouIgnoreIfNot": "Falls Sie dies waren, können Sie diese E-Mail ignonieren. Falls Sie dies nicht waren, loggen Sie sich bitte ein, korrigieren Sie Ihre E-Mail-Adresse, ändern Sie Ihr Passwort und kontaktieren Sie Ihren Matomo-Administrator.",
+        "IfThisWasYouIgnoreIfNot": "Falls Sie dies waren, können Sie diese E-Mail ignorieren. Falls Sie dies nicht waren, loggen Sie sich bitte ein, korrigieren Sie Ihre E-Mail-Adresse, ändern Sie Ihr Passwort und kontaktieren Sie Ihren Matomo-Administrator.",
         "PasswordChangeNotificationSubject": "Das Passwort Ihres Matomo Benutzerkontos wurde soeben geändert",
         "PasswordChangedEmail": "Ihr Passwort wurde soeben geändert. Diese Änderung wurde von diesem Gerät veranlasst: %1$s (IP-Adresse = %2$s).",
         "NewsletterSignupTitle": "Newsletter-Anmeldung",
