--- a/lang/el.json
+++ b/lang/el.json
@@ -133,7 +133,10 @@
         "DaysHours": "%1$s μέρες %2$s ώρες",
         "DaysSinceFirstVisit": "Ημέρες από την πρώτη επίσκεψη",
         "DaysSinceLastEcommerceOrder": "Μέρες πριν την τελευταία ηλεκτρονική παραγγελία",
+        "SecondsSinceLastEcommerceOrder": "Δευτερόλεπτα πριν την τελευταία ηλεκτρονική παραγγελία",
         "DaysSinceLastVisit": "Ημέρες από την τελευταία επίσκεψη",
+        "SecondsSinceLastVisit": "Δευτερόλεπτα από την τελευταία επίσκεψη",
+        "SecondsSinceFirstVisit": "Δευτερόλεπτα από την πρώτη επίσκεψη",
         "Default": "Προεπιλογή",
         "DefaultAppended": "(εξ' ορισμού)",
         "Delete": "Διαγραφή",
