--- a/plugins/UsersManager/lang/tr.json
+++ b/plugins/UsersManager/lang/tr.json
@@ -18,8 +18,10 @@
         "AuthTokenPurpose": "Bu kodu ne için kullanıyorsunuz?",
         "NoTokenCreatedYetCreateNow": "Henüz bir kod oluşturulmamış, %1$sburadan oluşturabilirsiniz%2$s.",
         "TokenSuccessfullyGenerated": "Kod üretildi",
+        "ConfirmTokenCopied": "Kodu kopyaladığımı ve başka kimse ile paylaşmamam gerektiğini anladığımı onaylıyorum.",
         "GoBackSecurityPage": "Güvenlik sayfasına geri dön.",
         "PleaseStoreToken": "Lütfen bir daha erişemeyeceğiniz ya da göremeyeceğiniz için kodunuzu güvenli bir yerde saklayın.",
+        "DoNotStoreToken": "Kullanıcı adı ve parolanız gibi gizli bir bilgi olduğundan bu kodu başka kimse ile paylaşmayın.",
         "CreateNewToken": "Yeni kod seç",
         "AnonymousAccessConfirmation": "Web sitenizde isimsiz kullanıcılara 'görüntüleme' izni vermek üzeresiniz. Bu izni verdiğinizde istatistik raporlarınız ve ziyaretçi bilgileriniz oturum açmamış bile olsalar herkes tarafından görüntülenebilir. Bu izni vermek istediğinize emin misiniz?",
         "AnonymousUser": "İsimsiz kullanıcı",
