--- a/plugins/Installation/lang/tr.json
+++ b/plugins/Installation/lang/tr.json
@@ -149,6 +149,7 @@
         "WelcomeHelp": "<p>Matomo web sitenizin ziyaretçileri hakkında bilgileri derleyerek incelemenizi kolaylaştıran özgür ve ücretsiz bir web istatistikleri yazılımıdır.<\/p><p>Bu işlem %s kolay adımda tamamlanacak ve yaklaşık 5 dakika sürecek.<\/p>",
         "WelcomeToCommunity": "Matomo Topluluğuna Hoş Geldiniz!",
         "CannotConnectToDb": "Veritabanı bağlantısı kurulamadı",
-        "CannotConnectToDbResolvingExplanation": "Bu durum geçici bir sorun olabilir, %1$ssayfayı yenilemeyi deneyin%2$s. Sorun sürerse Matomo yöneticinizle görüşün."
+        "CannotConnectToDbResolvingExplanation": "Bu durum geçici bir sorun olabilir, %1$ssayfayı yenilemeyi deneyin%2$s. Sorun sürerse Matomo yöneticinizle görüşün.",
+        "EmailPrivacyNotice": "E-posta adresiniz yalnız Matomo haberlerinin gönderilmesi için kullanılır. Bu işlem için e-posta adresinizi üçüncü taraf bir hizmet sağlayıcı ile paylaşmamız gerekiyor. Şu anda hizmet sağlayıcı olarak Mad Mimi kullanıyoruz ancak bu ileride değişebilir. E-posta adresinizi başka biri ile paylaşmayacağız ya da haber göndermek dışında başka bir amaçla kullanmayacağız. İstediğiniz an abonelikten ayrılabilirsiniz. Ayrıntılı bilgi almak için %1$sGizlilik İlkemize%2$s bakabilirsiniz."
     }
 }
