--- a/lang/sq.json
+++ b/lang/sq.json
@@ -133,7 +133,10 @@
         "DaysHours": "%1$s ditë %2$s orë",
         "DaysSinceFirstVisit": "Ditë që nga vizita e parë",
         "DaysSinceLastEcommerceOrder": "Ditë që nga porosia e parë E-tregti",
+        "SecondsSinceLastEcommerceOrder": "Sekonda që nga porosia e fundit Etregti",
         "DaysSinceLastVisit": "Ditë që nga vizita e fundit",
+        "SecondsSinceLastVisit": "Sekonda që nga vizita e fundit",
+        "SecondsSinceFirstVisit": "Sekonda që nga vizita e parë",
         "Default": "Parazgjedhje",
         "DefaultAppended": "(parazgjedhje)",
         "Delete": "Fshije",
