--- a/plugins/PrivacyManager/lang/sq.json
+++ b/plugins/PrivacyManager/lang/sq.json
@@ -10,7 +10,7 @@
         "ConsentExplanation": "Pranim do të thotë t’u ofrohet individëve zgjedhje dhe kontroll rreth se si përpunohen të dhënat e tyre personale.",
         "ClickHereSettings": "Klikoni këtu që të shkoni te rregullimet mbi %s.",
         "WhenDoINeedConsent": "Kur më duhet të kërkoj për pranim nga përdoruesi?",
-        "WhenConsentIsNeeded1": "Sipas rregullave GDPR mbi privatësinë, kur përpunoni të dhëna personale, në dusa raste do t’ju duhet të kërkoni për pranim nga përdoruesit tuaj. Që të përcaktoni nëse ju duhet apo jo të kërkoni pranim, ju duhet të përcaktoni nëse baza juaj ligjore për përpunim të dhënash personale është \"Pranim\" apo \"Interes i ligjshëm\", ose nëse mund të shmangni fare grumbullim të dhënash personale. Këshillojmë të mësoni më tepër mbi bazën ligjore sipas GDPR-së për Matomo-n.",
+        "WhenConsentIsNeeded1": "Në kontekstin e %1$srregullave GDPR mbi privatësinë%2$s, kur përpunoni të dhëna personale, në disa raste do t’ju duhet të kërkoni për pranim nga përdoruesit tuaj. Që të përcaktoni nëse ju duhet apo jo të kërkoni pranim, duhet të përcaktoni nëse baza juaj ligjore për përpunim të dhënash personale është \"Pranim\" ose \"Interes i ligjshëm\", ose nëse mund të shmangni fare grumbullim të dhënash personale. Këshillojmë të mësoni më tepër mbi %3$sbazën ligjore sipas GDPR-së për Matomo-n%4$s.",
         "WhenConsentIsNeeded2": "Mbani parasysh se kur e keni detyrim të merrni pranimin e përdoruesve dhe nuk provoni dot se patët \"Pranimin\" e përdoruesve tuaj në të kaluarën, atëherë këshillojmë të %1$sanonimizoni të dhënat e papërpunuara të përdoruesve të ndjekur dikur%2$s.",
         "HowDoIAskForConsent": "Si ta kërkoj pranimin nga përdoruesit?",
         "AskForConsentFollowSteps": "Ndiqni hapat vijues për t’u kërkuar përdoruesve tuaj pranimin, përpara se të dhënat e tyre përpunohen me Matomo-n.",
@@ -18,7 +18,7 @@
         "AskForConsentStep1Desc1": "Për të kërkuar pranim, futni rreshtin vijues në krye të kodit tuaj ekzistues për Ndjekje me Matomo në krejt faqet tuaja:",
         "AskForConsentStep1Desc2": "Pasi të jetë ekzekutuar ky funksion ‘requireConsent', te Matomo s’do të dërgohen kërkesa ndjekjeje. Kini parasysh që gjatë parjes së kësaj faqeje do të depozitohen ca %1$scookies ndjekjeje%2$s, por që do të fshihen sapo përdoruesi të kalojë në një faqe tjetër ose të mbyllë shfletuesin.",
         "AskForConsentStep2": "Hapi 2: kërkim pranimi nëpër njoftimin tuaj për privatësinë",
-        "AskForConsentStep2Desc": "Tani mund t’i kërkoni përdoruesit tuaj pranimin, për shembull duke i shfaqur një shënim të qartë privatësie në faqet tuaja. Mësoni më tepër rreth shënimesh mbi privatësinë dhe kërkim pranimi nga përdoruesi. Mbani parasysh se Matomo nuk ofron ende veçorinë e shfaqjes së një shënimi privatësie, por mund të sendërtojë një veçori të tillë në të ardhmen, për t’ju lejuar të shfaqni me lehtësi shënimin dhe të merrni pranime nga përdoruesit.",
+        "AskForConsentStep2Desc": "Tani mund t’i kërkoni përdoruesit tuaj pranimin, për shembull duke i shfaqur një shënim të qartë privatësie në faqet tuaja. Mësoni më tepër rreth %1$sshënimesh mbi privatësinë dhe kërkim pranimi nga përdoruesi%2$s. Mbani parasysh se Matomo nuk ofron ende veçorinë e shfaqjes së një shënimi privatësie, por mund të sendërtojë një veçori të tillë në të ardhmen, për t’ju lejuar të shfaqni me lehtësi shënimin dhe të merrni pranime nga përdoruesit.",
         "AskForConsentStep3": "Hapi 3: përdoruesi jep pranimin",
         "AskForConsentStep3Desc": "Pasi një përdorues jep pranimin, mundeni ose A) ta lini Matomo-s ta mbajë mend pranimin, ose B) të përdorni mjetin tuaj të pranimeve që të mbani mend pranimin. Më poshtë paraqesim dy zgjidhjet:",
         "AskForConsentStep3DescA": "A) nëse doni t’ia lini Matomo-s të mbajë mend pranimin",
@@ -61,6 +61,7 @@
         "CurrentDBSize": "Madhësia e tanishme e bazës së të dhënave",
         "DataRetention": "Mbajtje të dhënash",
         "DataRetentionInMatomo": "Mbajtje të dhënash për të dhëna të depozituara në Matomo:",
+        "DataRetentionOverall": "Vlera e përgjithshme e mbajtjes së të dhënave për rregullat tuaja të privatësisë është vlera e mbajtjes së të dhënave të papërpunuara. Ju lutemi, mbani parasysh se edhe raportet e përmbledhur mund të përmbajnë të dhëna personale. Nëse përdorni veçori të tilla si ID Përdoruesi, Ndryshore Vetjake, Përmasa Vetjake, ose ndiqni të dhëna personale në mënyra të tjera, të tilla si akte, URL-ra faqesh apo tituj faqesh, etj, atëherë vlera e përgjithshme e mbajtjes së të dhënave për rregullat tuaja të privatësisë është më e lartë se e të dyjave.",
         "RawDataRemovedAfter": "krejt të dhënat e papërpunuara mbi vizita dhe veprime fshihen pas %1$s.",
         "RawDataNeverRemoved": "të dhënat e papërpunuara të vizitave dhe veprimeve s’fshihen <strong>kurrë<\/strong>.",
         "ReportsRemovedAfter": "krejt raportet përmbledhës fshihen pas %1$s.",
