--- a/plugins/UsersManager/lang/el.json
+++ b/plugins/UsersManager/lang/el.json
@@ -177,6 +177,7 @@
         "EmailChangedEmail1": "Η διεύθυνση email που είναι συσχετισμένη με το λογαριασμό σας μόλις άλλαξε σε %1$s",
         "EmailChangedEmail2": "Η αλλαγή έγινε από την παρακάτω συσκευή: %1$s (Διεύθυνση IP = %2$s).",
         "IfThisWasYouIgnoreIfNot": "Αν ήσασταν εσείς, αγνοήστε το παρόν μήνυμα. Αν δεν ήσασταν εσείς, παρακαλούμε κάνετε είσοδο, διορθώστε την διεύθυνση email σας, αλλάξτε το συνθηματικό σας και επικοινωνήστε με το διαχειριστή σας του Matomo.",
+        "IfThisWasYouPasswordChange": "Αν δεν ήσασταν εσείς, αγνοήστε αυτό το μήνυμα. Αν δεν ήσασταν εσείς, επικοινωνήστε με το διαχειριστή του Matomo σας άμεσα, καθώς τα στοιχεία του λογαριασμού σας έχουν υποκλαπεί!",
         "PasswordChangeNotificationSubject": "Μόλις άλλαξε το συνθηματικό του λογαριασμού σας στο Matomo",
         "PasswordChangedEmail": "Το συνθηματικό σας μόλις άλλαξε. Η αλλαγή έγινε από την παρακάτω συσκευή: %1$s (διεύθυνση IP = %2$s).",
         "NewsletterSignupTitle": "Εγγραφή στα Μηνύματα με Νέα",
