--- a/plugins/CustomDimensions/lang/el.json
+++ b/plugins/CustomDimensions/lang/el.json
@@ -38,6 +38,7 @@
         "ColumnAvgTimeOnDimension": "Μέσος Χρόνος στη Διάσταση",
         "CustomDimensionId": "Προσαρμοσμένες Διαστάσεις (Α\/Α %d)",
         "NoValue": "χωρίς τιμή",
+        "PluginDescription": "Προσαρμόστε το Matomo στις ανάγκες σας ορίζοντας και ιχνηλατώντας Προσαρμοσμένες Διαστάσεις στο εύρος Ενέργειας ή Επίσκεψης",
         "EmptyValue": "κενή τιμή"
     }
 }
