--- a/plugins/Ecommerce/lang/de.json
+++ b/plugins/Ecommerce/lang/de.json
@@ -5,6 +5,10 @@
         "Order": "Bestellung",
         "OrderId": "Bestellungs-ID",
         "Orders": "Bestellungen",
+        "ViewedProductCategory": "Angesehene Produktkategorie",
+        "ViewedProductName": "Angesehener Produktname",
+        "ViewedProductPrice": "Angesehener Produktpreis",
+        "ViewedProductSKU": "Angesehener Produkt SKU",
         "SalesBy": "Umsatz nach %s",
         "SalesAdjective": "Umsatz %s",
         "NumberOfItems": "Anzahl an Artikeln im Warenkorb",
