--- a/plugins/PrivacyManager/lang/en.json
+++ b/plugins/PrivacyManager/lang/en.json
@@ -13,6 +13,7 @@
         "WhenConsentIsNeeded1": "In the context of the %1$sGDPR privacy regulations%2$s, when you are processing personal data, in some cases you will need to ask for your users' consent. To identify whether you need to ask for consent, you need to determine whether your lawful basis for processing personal data is \"Consent\" or \"Legitimate interest\", or whether you can avoid collecting personal data altogether. We recommend to learn more about the %3$slawful basis under the GDPR for Matomo%4$s.",
         "WhenConsentIsNeeded2": "Note that when you require to have your users' consents and if you cannot prove that you got the \"Consent\" of your users in the past, then we recommend to %1$sanonymise your previously tracked users' raw data%2$s.",
         "HowDoIAskForConsent": "How do I ask users for consent?",
+        "HowDoIAskForConsentIntroduction": "Learn everything about %1$sasking for cookie or tracking consent in our integration guide.%2$s",
         "AnonymizeSites": "Anonymize the data of this site(s)",
         "AnonymizeRowDataFrom": "Anonymize all raw data starting from:",
         "AnonymizeRowDataTo": "Anonymize all raw data up to:",
