--- a/plugins/DevicesDetection/lang/en.json
+++ b/plugins/DevicesDetection/lang/en.json
@@ -47,6 +47,11 @@
         "Phablet": "Phablet",
         "TV": "Tv",
         "UserAgent": "User-Agent",
+        "Library": "Library",
+        "FeedReader": "Feed Reader",
+        "MobileApp": "Mobile App",
+        "Pim": "PIM",
+        "MediaPlayer": "Media Player",
         "XVisitsFromDevices": "%1$s visits from %2$s devices",
         "Wearable": "Wearable",
         "WidgetBrowsers": "Visitor Browser",
